2004-11-20  Gary Cramblitt (PhantomsDad)
        * Add pitch control to Festival Interactive.

2004-11-17  Gary Cramblitt (PhantomsDad)
        * Bug fix.  Hosed Talker in KTTSMgr after removing a Talker and clicking Cancel.
        * In KTTSMgr no longer record LastTalkerID in config file; compute at load time instead.
        * Change Talker tab in KTTSMgr to "standard" layout.
        * Bug fix.  Talker matching.  Tended to pick last talker no matter what.

2004-11-13  Gary Cramblitt (PhantomsDad)
        * Fix.  Nothing happens when clicking Configure button for Festival Interactive
          plugin if your desktop language is not English.  Display translated name for
          Synthesizer in Talkers tab.
        * Display translated words for "male", "female", "neutral", "fast", "slow", "medium",
          "loud", "soft" in KTTSMgr Talkers list and from Jobs "Change Talker" button.
        * getTalkers() not returning country code as part of Talker Code.
        * The Command plugin configuration dialog should enable OK button if %t or %f
          appear in command, or "Send data via stdin" is checked.  Also uncheck this option
          by default in order for plugin to sense proper configuration.
        * Add Jorge Luis Arzola to credits as tester.

2004-11-11  Gary Cramblitt (PhantomsDad)
        * Support for Festival 2.0. and Festival MultiSyn voices in FestivalInt plugin.
        * Query Festival for available voices, rather than scanning for directories.
        * Support for multiple versions of Festival executable.  Now asks for EXE path rather
          than voices path.
        * Allow preload of Festival voices that take a long time to load.
          If set, Festival is started when KTTSD starts and the voice is loaded.
        * When stopText() is called and FestivalInt plugin is synthing (not saying) using
          a pre-loaded voice, instead of killing Festival, which would cost hugely in