@@ -10,7 +10,7 @@
             <x>0</x>
             <y>0</y>
             <width>559</width>
-            <height>239</height>
+            <height>272</height>
         </rect>
     </property>
     <property name="sizePolicy">
@@ -245,12 +245,34 @@
                         </property>
                         <widget class="QLayoutWidget">
                             <property name="name">
-                                <cstring>layout10</cstring>
+                                <cstring>layout8</cstring>
                             </property>
                             <vbox>
                                 <property name="name">
                                     <cstring>unnamed</cstring>
                                 </property>
+                                <widget class="QLabel">
+                                    <property name="name">
+                                        <cstring>volumeLabel</cstring>
+                                    </property>
+                                    <property name="sizePolicy">
+                                        <sizepolicy>
+                                            <hsizetype>0</hsizetype>
+                                            <vsizetype>5</vsizetype>
+                                            <horstretch>0</horstretch>
+                                            <verstretch>0</verstretch>
+                                        </sizepolicy>
+                                    </property>
+                                    <property name="text">
+                                        <string>&amp;Volume:</string>
+                                    </property>
+                                    <property name="buddy" stdset="0">
+                                        <cstring>volumeBox</cstring>
+                                    </property>
+                                    <property name="whatsThis" stdset="0">
+                                        <string>Sets the speed of speech.  Slide the slider to the left to slow speech down; to the right to increase talking speed.  Anything less than 75 percent is considered "slow", and anything greater than 125 percent is considered "fast".  You cannot change the speed of MultiSyn voices.</string>
+                                    </property>
+                                </widget>
                                 <widget class="QLabel">
                                     <property name="name">
                                         <cstring>timeLabel</cstring>
@@ -264,7 +286,10 @@
                                         </sizepolicy>
                                     </property>
                                     <property name="text">
-                                        <string>Speed:</string>
+                                        <string>Sp&amp;eed:</string>
+                                    </property>
+                                    <property name="buddy" stdset="0">
+                                        <cstring>timeBox</cstring>
                                     </property>
                                     <property name="whatsThis" stdset="0">
                                         <string>Sets the speed of speech.  Slide the slider to the left to slow speech down; to the right to increase talking speed.  Anything less than 75 percent is considered "slow", and anything greater than 125 percent is considered "fast".  You cannot change the speed of MultiSyn voices.</string>
@@ -283,7 +308,10 @@
                                         </sizepolicy>
                                     </property>
                                     <property name="text">
-                                        <string>Pitch:</string>
+                                        <string>&amp;Pitch:</string>
+                                    </property>
+                                    <property name="buddy" stdset="0">
+                                        <cstring>frequencyBox</cstring>
                                     </property>
                                     <property name="whatsThis" stdset="0">
                                         <string>Sets the speed of speech.  Slide the slider to the left to slow speech down; to the right to increase talking speed.  Anything less than 75 percent is considered "slow", and anything greater than 125 percent is considered "fast".  You cannot change the speed of MultiSyn voices.</string>
@@ -299,6 +327,37 @@
                                 <property name="name">
                                     <cstring>unnamed</cstring>
                                 </property>
+                                <widget class="KIntSpinBox">
+                                    <property name="name">
+                                        <cstring>volumeBox</cstring>
+                                    </property>
+                                    <property name="enabled">
+                                        <bool>true</bool>
+                                    </property>
+                                    <property name="sizePolicy">
+                                        <sizepolicy>
+                                            <hsizetype>0</hsizetype>
+                                            <vsizetype>0</vsizetype>
+                                            <horstretch>0</horstretch>
+                                            <verstretch>0</verstretch>
+                                        </sizepolicy>
+                                    </property>
+                                    <property name="suffix">
+                                        <string> %</string>
+                                    </property>
+                                    <property name="maxValue">
+                                        <number>200</number>
+                                    </property>
+                                    <property name="minValue">
+                                        <number>50</number>
+                                    </property>
+                                    <property name="value">
+                                        <number>100</number>
+                                    </property>
+                                    <property name="whatsThis" stdset="0">
+                                        <string>Sets the speed of speech.  Slide the slider to the left to slow speech down; to the right to increase talking speed.  Anything less than 75 percent is considered "slow", and anything greater than 125 percent is considered "fast".  You cannot change the speed of MultiSyn voices.</string>
+                                    </property>
+                                </widget>
                                 <widget class="KIntSpinBox">
                                     <property name="name">
                                         <cstring>timeBox</cstring>
@@ -365,12 +424,44 @@
                         </widget>
                         <widget class="QLayoutWidget">
                             <property name="name">
-                                <cstring>layout8</cstring>
+                                <cstring>layout10</cstring>
                             </property>
                             <vbox>
                                 <property name="name">
                                     <cstring>unnamed</cstring>
                                 </property>
+                                <widget class="QSlider">
+                                    <property name="name">
+                                        <cstring>volumeSlider</cstring>
+                                    </property>
+                                    <property name="enabled">
+                                        <bool>true</bool>
+                                    </property>
+                                    <property name="focusPolicy">
+                                        <enum>NoFocus</enum>
+                                    </property>
+                                    <property name="minValue">
+                                        <number>0</number>
+                                    </property>
+                                    <property name="maxValue">
+                                        <number>1000</number>
+                                    </property>
+                                    <property name="lineStep">
+                                        <number>10</number>
+                                    </property>
+                                    <property name="pageStep">
+                                        <number>100</number>
+                                    </property>
+                                    <property name="value">
+                                        <number>500</number>
+                                    </property>
+                                    <property name="orientation">
+                                        <enum>Horizontal</enum>
+                                    </property>
+                                    <property name="whatsThis" stdset="0">
+                                        <string>Sets the speed of speech.  Slide the slider to the left to slow speech down; to the right to increase talking speed.  Anything less than 75 percent is considered "slow", and anything greater than 125 percent is considered "fast".  You cannot change the speed of MultiSyn voices.</string>
+                                    </property>
+                                </widget>
                                 <widget class="QSlider">
                                     <property name="name">
                                         <cstring>timeSlider</cstring>
@@ -443,6 +534,7 @@
     <tabstop>festivalPath</tabstop>
     <tabstop>selectVoiceCombo</tabstop>
     <tabstop>rescan</tabstop>
+    <tabstop>volumeBox</tabstop>
     <tabstop>timeBox</tabstop>
     <tabstop>frequencyBox</tabstop>
     <tabstop>preloadCheckBox</tabstop>
@@ -459,6 +551,7 @@
     <includehint>kpushbutton.h</includehint>
     <includehint>kcombobox.h</includehint>
     <includehint>kpushbutton.h</includehint>
+    <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
 </includehints>
