@@ -1,3 +1,7 @@
+2004-11-21  Gary Cramblitt (PhantomsDad)
+        * Add volume control to Festival Interactive.
+        * Accelerators for Festival Interactive configuration dialog.
+
 2004-11-20  Gary Cramblitt (PhantomsDad)
         * Add pitch control to Festival Interactive.
 
